chore: replace usage of collect(Collectors.toList()) with toList()
as in those situations we actually prefer an unomodifiable list versus a
modifiable one given by collect(Collectors.toList())